Added Express to the project for routing.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
 
 <!-- Navigation Bar -->
 <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">News</a></li>
-    <li><a href="#">Contact</a></li>
-    <li><a href="#">About</a></li>
+
+
+    <h3 style="text-align: center">New Requests</h3>
 </ul>
 
 <!-- Left Pane -->
