Added two tables one left justified and one right justified.

--- a/index.html
+++ b/index.html
@@ -7,19 +7,41 @@
 </head>
 <body>
 
-<!-- Navigation Bar -->
+<!-- Left Navigation Bar -->
 <ul class="navLeft">
-    <h3 style="text-align: center">New Requests</h3>
+    <h3>New Requests</h3>
 </ul>
 
+<!-- Right Navigation Bar -->
 <ul class="navRight">
-    <h3 style="text-align: center">In Process</h3>
+    <h3>In Process</h3>
 </ul>
-<!-- Left Pane -->
 
+<!-- Left Table -->
+<div class="tableLeft">
+<table>
+    <tr>
+        <th>From</th>
+        <th>To</th>
+        <th>no. Passengers</th>
+        <th>Accommodations</th>
+        <th>Time In</th>
+    </tr>
+</table>
+</div>
 
-<!-- Right Pane -->
-
+<!-- Right Table -->
+<div class="tableRight">
+    <table>
+        <tr>
+            <th>From</th>
+            <th>To</th>
+            <th>no. Passengers</th>
+            <th>Accommodations</th>
+            <th>Time In</th>
+        </tr>
+    </table>
+</div>
 
 </body>
 </html>
